[package]
name = "tsss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "writer"
harness = false

[dependencies]
chrono = { version = "0.4.19", default-features=false, features = ["clock"]}

[dev-dependencies]
criterion = { version = "0.3.5"}
